# boquilahub

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MD_AudioBirds_V1.json  README.md  gui_embedding.MD  issues.MD  output.csv  pubspec.yaml  url.txt
.cargo/: config.toml
.github/: FUNDING.yml  macos-cc-shim.sh
.github/workflows/: cargo-build-linux-dev.yml  cargo-build-linux-test.yml  cargo-build-linux.yml  cargo-build-macos.yml  cargo-build-windows-dev.yml  cargo-build-windows.yml  cargo-test-linux.yml  cargo-test-macos.yml  cargo-test-windows.yml  release.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/boquilahub/: MainActivity.kt
assets/: app.rc  boquila.proto  common-hanzi.txt  geofence.json
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: buttons.dart  main.dart  palettes.dart  processing.dart  select.dart  select_ai.dart
lib/src/resources/: hardware_dep.dart  objects.dart  palettes.dart  ui.dart  utils.dart  windows.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: abstractions.dart  inference.dart  postprocessing.dart  preprocessing.dart  simple.dart  utils.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: abstractions.rs  bq.rs  eps.rs  export.rs  exportutils.rs  feed.rs  file_formats.rs  global.rs  import.rs  inference.rs  mod.rs  post_processing.rs  postprocessing.rs  pre_processing.rs  preprocessing.rs  render.rs  rest.rs  simple.rs  stream.rs  utils.rs  video_file.rs
rust/src/api/models/: mod.rs  yolo.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_boquilahub.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_boquilahub.podspec
rust_builder/windows/: CMakeLists.txt
src/: app.rs  build.rs  cli.rs  gui.rs  lib.rs  localization.rs  main.rs  tui.rs
src/api/: abstractions.rs  audio.rs  bq.rs  ep.rs  eps.rs  export.rs  formats.rs  grpc.rs  import.rs  inference.rs  mod.rs  post_processing.rs  pull.rs  render.rs  rest.rs  stream.rs  utils.rs  video_file.rs
src/api/models/: batdetect2.rs  clip.rs  dinov3.rs  efficientnet.rs  mod.rs  overhead.rs  perch.rs  resnet18.rs  yolo.rs
src/api/models/processing/: inference.rs  mod.rs  post_processing.rs  pre_processing.rs
src/api/models/processing/ensemble/: ensemble.rs  geofence_utils.rs  mod.rs
src/api/processing/: inference.rs  mod.rs  post.rs  post_processing.rs  pre.rs  pre_processing.rs
src/gui/: audio.rs  feed.rs  image.rs  mod.rs  video_file.rs
src/xtask/: Cargo.toml
src/xtask/src/: main.rs
tests/: audio.rs  bioclip.rs  embeddings.rs  inference.rs  perch.rs  post.rs  post_processing.rs  run_models.rs
tests/assets/: combined_predictions.json
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
