[workspace]
members = ["src/xtask"]
resolver = "2"

[package]
name = "boquilahub"
version = "0.6.0"
edition = "2024"
build = "src/build.rs"
authors = ["José Díaz <jose@boquila.org>"]
description = "Cross‑platform CLI and GUI tool for local AI‑powered nature monitoring"

[dependencies]
egui = "0.35.0"
eframe = { version = "0.35.0", default-features = false, features = [
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
ffmpeg-next = "8.1.0"
image = { version = "0.25.10", features = ["jpeg", "png"] }
ndarray = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std","ndarray","download-binaries","copy-dylibs","tls-rustls"] }
axum = { version = "0.8.9", default-features = false, features = ["multipart", "http1", "tokio"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "net", "fs", "io-util"] }
reqwest = { version = "0.13.4", features = ["json","blocking", "multipart"] }
imageproc = "0.27.0"
ab_glyph = "0.2.32"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
rfd = "0.17.2" # File dialogs
clap = { version = "4.6.1", features = ["derive"] }
sys-locale = "0.3.2"
rayon = "1.12.0"
bitvec = { version = "1.0.1", features = ["serde"] }
anyhow = "1.0.103"
fast_image_resize = { version = "=6.0.0", features = ["image"] }
ratatui = "0.30.2"
realfft = "3.5"
rodio = { version = "0.22.2", default-features = false, features = ["playback"] }
egui_plot = "0.36.0"

[features]
default = ["webgpu"]
webgpu = ["ort/webgpu"]
cuda = ["ort/cuda"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[build-dependencies]
font-subset = "0.1.0"
ab_glyph = "0.2.32"

# Winslop
[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincon"] }
