[package]
name = "rust_lib_boquilahub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
image = "0.25.5"
ndarray = "0.16"
serde_json = "1.0.138"
ort = { version = "2.0.0-rc.9", features = ["cuda"]}
once_cell = "1.19.0"
regex = "1.11.1"
axum = { version = "0.8.1", features = ["multipart"]}
tokio = { version = "1.43.0", features = ["full"] }
sonogram = "=0.2.1"
csv = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "multipart"] }