[package]
name = "rust_lib_boquilahub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.8.0"
image = "0.25.6"
ndarray = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ort = { version = "2.0.0-rc.9", features = ["cuda"]}
once_cell = "1.19.0"
regex = "1.11.1"
axum = { version = "0.8.3", features = ["multipart"]}
tokio = { version = "1.44.2", features = ["full"] }
sonogram = "=0.2.1"
csv = "1.3.1"
reqwest = { version = "0.12.15", features = ["blocking", "multipart"] }
video-rs = { version = "0.10.3", features = ["ndarray"] }
imageproc = "0.25.0"
ab_glyph = "0.2.29"
pulp = "0.21.4"
